# csync

./: .gitignore  README.md  pyproject.toml
src/csync/: cli.py  config.py  daemon.py  process_manager.py  rsync.py
tests/: test_config.py  test_daemon.py  test_process_manager.py  test_rsync.py
