[project]
name = "csync"
version = "0.1.0"
description = "A Python wrapper for rsync to sync code between local and remote machines"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "psutil>=7.1.0",
    "pyyaml>=6.0",
    "rich>=14.1.0",
    "typer>=0.19.2",
    "watchdog>=6.0.0",
]
authors = [{ name = "csync", email = "csync@example.com" }]
license = { text = "MIT" }
keywords = ["rsync", "sync", "remote", "ssh", "backup"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: System :: Archiving :: Backup",
    "Topic :: System :: Systems Administration",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Environment :: Console",
]

[project.urls]
Homepage = "https://github.com/username/csync"
Repository = "https://github.com/username/csync"
Issues = "https://github.com/username/csync/issues"

[project.scripts]
csync = "csync.cli:main"

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/csync"]
